Commented out carousel until everything else is in and in good position.

--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -165,112 +165,125 @@
                     suit the intended community.</p>
 
             </div>
-
-            <div id="container">
-                <div id="toggleContainer">
-                    <label>Carousel</label>
-                    <div id="toggle">
-                        <div id="outer3">
-                            <div id="slider3"></div>
+            <!--
+                        <div id="container">
+                            <div id="toggleContainer">
+                                <label>Carousel</label>
+                                <div id="toggle">
+                                    <div id="outer3">
+                                        <div id="slider3"></div>
+                                    </div>
+                                    <label>Tiles</label>
+                                </div>
+                            </div>
+                            <div id="galleryView">
+                                <div id="galleryContainer">
+                                    <div id="leftView"></div>
+                                    <button id="navLeft" class="navBtns"><i class="fas fa-arrow-left fa-3x"></i></button>
+                                    <a id="linkTag">
+                                        <div id="mainView"></div>
+                                    </a>
+                                    <div id="rightView"></div>
+                                    <button id="navRight" class="navBtns"><i class="fas fa-arrow-right fa-3x"></i></button>
+                                </div>
+                            </div>
+                            <div id="tilesView">
+                                <div id="tilesContainer"></div>
+                            </div>
                         </div>
-                        <label>Tiles</label>
                     </div>
-                </div>
-                <div id="galleryView">
-                    <div id="galleryContainer">
-                        <div id="leftView"></div>
-                        <button id="navLeft" class="navBtns"><i class="fas fa-arrow-left fa-3x"></i></button>
-                        <a id="linkTag">
-                            <div id="mainView"></div>
-                        </a>
-                        <div id="rightView"></div>
-                        <button id="navRight" class="navBtns"><i class="fas fa-arrow-right fa-3x"></i></button>
+            -->
+            <div class="container">
+
+                <div class="about">
+                    <div class="left">
+                        <h1>Statement of Need</h1>
+                        <hr>
+                        <p>Our marginal societies suffer from innate poverty. Orphans and vulnerable children, persons
+                            with
+                            a disability, widows, the elderly and also young rural women are the hardest hit. These
+                            individuals and groups live on less than a dollar a day. </p>
+                        <p>There are massive food shortages in the communities. They are deprived from a decent meal
+                            hence
+                            prone to malnutrition diseases. Most of them live on two light meals per day to keep them
+                            alive.
+                            A balanced diet in this context is usually a nightmare. For those in elderly homes and
+                            orphanages food supply is a great challenge. Most communities have little to none good
+                            floors of
+                            income to sustain them hence the need to establish some projects.</p>
+                        <p>Education is a cornerstone to human kind however poverty has denied our beloved communities.
+                            Most
+                            marginalised communities are not able to attend school due to lack of incomes to meet the
+                            school
+                            fees demand. A high rate of dropouts is experienced. A majority of these will contribute to
+                            a
+                            low literacy rate and create vulnerable communities. </p>
+                        <p>The majority of the population in context has no decent shelter. It is usually a situation of
+                            overpopulation or exposure to harsh weather and failure to afford basic utilities. These
+                            need a
+                            good income and some projects would be best suited a lasting solution.</p>
+
+                        <p>Medical bills have posed a life threatening situation. In the face of the pandemics the poor
+                            cannot survive the costs even the medical subsidy cannot reach far to them. HIV/AIDS,
+                            malaria
+                            corona virus and cancer to name a few have robed our loved ones due to poverty. </p>
+
+                        <p>Through income generating projects at both individual and institutional levels more income
+                            can be
+                            generated to sustain a life. Communities have either tried and gave up or contemplated
+                            starting
+                            income generating projects to address their basic needs. GCET is there to bridge the
+                            knowledge
+                            gap and empower communities through entrepreneurship. Projects will be from all sectors of
+                            the
+                            economy with a major thrust in agriculture.</p>
+
                     </div>
+                    <div class="right">
+                        <img src="{% static 'webapp/images/older-gentleman-buckets.webp' %}" alt="">
+                    </div>
+                    <div class="clear"></div>
                 </div>
-                <div id="tilesView">
-                    <div id="tilesContainer"></div>
-                </div>
-            </div>
-        </div>
 
-        <div class="container">
 
-            <div class="about">
-                <div class="left">
-                    <h1>Statement of Need</h1>
-                    <hr>
-                    <p>Our marginal societies suffer from innate poverty. Orphans and vulnerable children, persons with
-                        a disability, widows, the elderly and also young rural women are the hardest hit. These
-                        individuals and groups live on less than a dollar a day. </p>
-                    <p>There are massive food shortages in the communities. They are deprived from a decent meal hence
-                        prone to malnutrition diseases. Most of them live on two light meals per day to keep them alive.
-                        A balanced diet in this context is usually a nightmare. For those in elderly homes and
-                        orphanages food supply is a great challenge. Most communities have little to none good floors of
-                        income to sustain them hence the need to establish some projects.</p>
-                    <p>Education is a cornerstone to human kind however poverty has denied our beloved communities. Most
-                        marginalised communities are not able to attend school due to lack of incomes to meet the school
-                        fees demand. A high rate of dropouts is experienced. A majority of these will contribute to a
-                        low literacy rate and create vulnerable communities. </p>
-                    <p>The majority of the population in context has no decent shelter. It is usually a situation of
-                        overpopulation or exposure to harsh weather and failure to afford basic utilities. These need a
-                        good income and some projects would be best suited a lasting solution.</p>
+                <div class="mission">
 
-                    <p>Medical bills have posed a life threatening situation. In the face of the pandemics the poor
-                        cannot survive the costs even the medical subsidy cannot reach far to them. HIV/AIDS, malaria
-                        corona virus and cancer to name a few have robed our loved ones due to poverty. </p>
-
-                    <p>Through income generating projects at both individual and institutional levels more income can be
-                        generated to sustain a life. Communities have either tried and gave up or contemplated starting
-                        income generating projects to address their basic needs. GCET is there to bridge the knowledge
-                        gap and empower communities through entrepreneurship. Projects will be from all sectors of the
-                        economy with a major thrust in agriculture.</p>
+                    <div class="left">
+                        <img src="{% static 'webapp/images/group-sitting.webp' %}">
+                    </div>
+                    <div class="right">
+                        <h1>How We Add Value</h1>
+                        <hr>
+                        <p>Our social philanthropy is to address human need in education, food, shelter and medication
+                            through partnership and cooperative efforts to end poverty. We help communities identify
+                            their
+                            community sustainable business solution and help them achieve it. We are a gateway to
+                            success
+                            through imparting business skills, mentoring and marketing. We are an entrepreneurship based
+                            organisation hence we deliver skill through a team of our diverse business experts. </p>
+                    </div>
 
                 </div>
-                <div class="right">
-                    <img src="{% static 'webapp/images/older-gentleman-buckets.webp'%}"  alt="">
+                <div class="clear">
                 </div>
-                <div class="clear"></div>
-            </div>
 
+                <script src="{% static 'js/jquery.min.js' %}"></script>
+                <!-- jQuery Easing -->
+                <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+                <!-- Bootstrap -->
+                <script src="{% static 'js/bootstrap.min.js' %}"></script>
+                <!-- Waypoints -->
+                <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+                <script src="{% static 'js/sticky.js' %}"></script>
 
-            <div class="mission">
+                <!-- Stellar -->
+                <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+                <!-- Superfish -->
+                <script src="{% static 'js/hoverIntent.js' %}"></script>
+                <script src="{% static 'js/superfish.js' %}"></script>
 
-                <div class="left">
-                    <img src="{% static 'webapp/images/group-sitting.webp' %}">
-                </div>
-                <div class="right">
-                    <h1>How We Add Value</h1>
-                    <hr>
-                    <p>Our social philanthropy is to address human need in education, food, shelter and medication
-                        through partnership and cooperative efforts to end poverty. We help communities identify their
-                        community sustainable business solution and help them achieve it. We are a gateway to success
-                        through imparting business skills, mentoring and marketing. We are an entrepreneurship based
-                        organisation hence we deliver skill through a team of our diverse business experts. </p>
-
-                </div>
-                <div class="clear"></div>
-    </body>
-
-
-
-
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <!-- jQuery Easing -->
-    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-    <!-- Bootstrap -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Waypoints -->
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/sticky.js' %}"></script>
-
-    <!-- Stellar -->
-    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-    <!-- Superfish -->
-    <script src="{% static 'js/hoverIntent.js' %}"></script>
-    <script src="{% static 'js/superfish.js' %}"></script>
-
-    <!-- Main JS -->
-    <script src="{% static 'js/main.js' %}"></script>
+                <!-- Main JS -->
+                <script src="{% static 'js/main.js' %}"></script>
 
 
 {% endblock content %}
