Changed copyright tag, added in organizational values list but that is going to change, since it doesn't really belong.

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -105,7 +105,7 @@
 
         </p>
 
-        <p class="footer-company-name">Miracle &copy; 2021</p>
+        <p class="footer-company-name">Jumping Protein &copy; 2021</p>
     </div>
 
     <div class="footer-center">
