--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -151,13 +151,29 @@
 <div id="fh5co-portfolio">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-                <h3>Statement of Need</h3>
-                <p>We know that more than 50% of the rural population in Zimbabwe is affected by food insecurity.
-                    There is a serious lack of balanced diet where up to 75% cannot consume protein regularly.
-                    We also know that there is a rapid increase in child malnutrition and stunted growth as well as
-                    wasting. </p>
+            <div class="column">
+                <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
+                    <h3>Statement of Need</h3>
+                    <p>We know that more than 50% of the rural population in Zimbabwe is affected by food insecurity.
+                        There is a serious lack of balanced diet where up to 75% cannot consume protein regularly.
+                        We also know that there is a rapid increase in child malnutrition and stunted growth as well as
+                        wasting. </p>
+                </div>
             </div>
+        </div>
+        <div class="values-column">
+            <h3>Organisational Values</h3>
+
+            <ul>
+                <li>• Divine intervention for positive transformation.</li>
+                <li> • Empowerment through education.</li>
+                <li>• Timely response to human need and response to disaster.</li>
+                <li>• Respect to gender, disability, creed, race and any form of cultural diversity.</li>
+                <li>• Transparent and competent human contribution</li>
+                <li>• Teamwork, approachability, accessibility and dependability.</li>
+                <li>• High business integrity, trust truth and love.</li>
+            </ul>
+
         </div>
         <div class="row row-bottom-padded-md">
             <div class="col-md-12">
