values list css

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -142,7 +142,13 @@ a:active {
 
 
 /* Info Card */
+.values-column {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30em;
+    display: block;
 
+}
 
 /*********************************************************************************/
 /* Image Style                                                                   */
