--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,23 +9,24 @@
     </head>
     <h1>Welcome to the Jumping Protein Blog!</h1>
     <h6>This is where you will find all current events, and news surround GCET and Jumping Protein!</h6>
-
+    <br>
     {% for post in posts %}
         <div class="container">
             <div class="mt-3">
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title"><a href="{{ post.slug }}">{{ post.title }}</a></h5>
+                        <h5 class="card-title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
                         <p class="card-text">        {{ post.body|safe|linebreaksbr|truncatechars:100 }}
                         </p>
                         <p class="card-text"><small class="text-muted">
                         <p class="date">
                             Published {{ post.publish|safe }} by {{ post.author }}
-                        </p></small></p>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+
 
 
 
