Trying to reformat index values column.

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -161,19 +161,21 @@
                 </div>
             </div>
         </div>
-        <div class="values-column">
-            <h3>Organisational Values</h3>
+        <div class="flex">
+            <div class="values-column">
+                <h2>Organizational Values</h2>
 
-            <ul>
-                <li>• Divine intervention for positive transformation.</li>
-                <li> • Empowerment through education.</li>
-                <li>• Timely response to human need and response to disaster.</li>
-                <li>• Respect to gender, disability, creed, race and any form of cultural diversity.</li>
-                <li>• Transparent and competent human contribution</li>
-                <li>• Teamwork, approachability, accessibility and dependability.</li>
-                <li>• High business integrity, trust truth and love.</li>
-            </ul>
+                <ul>
+                    <li>• Divine intervention for positive transformation.</li>
+                    <li>• Empowerment through education.</li>
+                    <li>• Timely response to human need and response to disaster.</li>
+                    <li>• Respect to gender, disability, creed, race and any form of cultural diversity.</li>
+                    <li>• Transparent and competent human contribution</li>
+                    <li>• Teamwork, approachability, accessibility and dependability.</li>
+                    <li>• High business integrity, trust truth and love.</li>
+                </ul>
 
+            </div>
         </div>
         <div class="row row-bottom-padded-md">
             <div class="col-md-12">
