--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,63 +5,27 @@
 {% block content %}
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-        <title>Our Blog</title>
-        <style>
-            body {
-                font-family: "Roboto", sans-serif;
-                font-size: 17px;
-                background-color: #fdfdfd;
-            }
-
-            .shadow {
-                box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-            }
-
-            .btn-danger {
-                color: #fff;
-                background-color: #f00000;
-                border-color: #dc281e;
-            }
-
-            .masthead {
-                background: #3398E1;
-                height: auto;
-                padding-bottom: 15px;
-                box-shadow: 0 16px 48px #E3E7EB;
-                padding-top: 10px;
-            }
-
-            .card {
-                box-shadow: 0 16px 48px #E3E7EB;
-            }
-
-            body {
-                font-family: "Roboto", sans-serif;
-                font-size: 18px;
-                background-color: #fdfdfd;
-            }
-
-            .head_text {
-                color: white;
-            }
-
-            .card {
-                box-shadow: 0 16px 48px #E3E7EB;
-            }
-        </style>
+        <title></title>
     </head>
     <h1>Welcome to the Jumping Protein Blog!</h1>
     <h6>This is where you will find all current events, and news surround GCET and Jumping Protein!</h6>
     <br>
     {% for post in posts %}
-        <div class="card mb-3">
-            <img src="url ({{ post.blog_image }})" class="card-img-top" alt="Image">
-            <div class="card-body">
-                <h5 class="card-title">{{ post.title }}</h5>
-                <p class="card-text">{{ post.body|safe|linebreaksbr|truncatechars:200}}</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <div class="container">
+            <div class="mt-3">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
+                        <p class="card-text">        {{ post.body|safe|linebreaksbr|truncatechars:100 }}
+                        </p>
+                        <p class="card-text"><small class="text-muted">
+                        <p class="date">
+                            Published {{ post.publish|safe }} by {{ post.author }}
+                        </p>
+                    </div>
+                </div>
             </div>
-
+        </div>
 
 
     {% endfor %}
