--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,28 +5,215 @@
 {% block content %}
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-        <title></title>
+        <title>Our Blog</title>
+        <style>
+            body {
+                background: #eee;
+            }
+
+            .date__box {
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                color: #ccc;
+                border: 4px solid;
+                font-weight: bold;
+                padding: 5px 10px;
+            }
+
+            .date__box .date__day {
+                font-size: 22px;
+            }
+
+            .blog-card {
+                padding: 30px;
+                position: relative;
+            }
+
+            .blog-card .date__box {
+                opacity: 0;
+                transform: scale(0.5);
+                transition: 300ms ease-in-out;
+            }
+
+            .blog-card .blog-card__background,
+            .blog-card .card__background--layer {
+                z-index: auto;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+
+            .blog-card .blog-card__background {
+                padding: 15px;
+
+            }
+
+            .blog-card .card__background--wrapper {
+                height: 100%;
+                clip-path: polygon(0 0, 100% 0, 100% 80%, 0 60%);
+                position: relative;
+                overflow: hidden;
+            }
+
+            .blog-card .card__background--main {
+                height: 100%;
+                position: relative;
+                transition: 300ms ease-in-out;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+
+            .blog-card .card__background--layer {
+                z-index: 0;
+                opacity: 0;
+                background: rgba(51, 51, 51, 0.9);
+                transition: 300ms ease-in-out;
+            }
+
+            .blog-card .blog-card__head {
+                height: 300px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .blog-card .blog-card__info {
+                z-index: 10;
+                background: white;
+                padding: 20px 15px;
+            }
+
+            .blog-card .blog-card__info h5 {
+                transition: 300ms ease-in-out;
+            }
+
+            .blog-card:hover .date__box {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            .blog-card:hover .card__background--main {
+                transform: scale(1.2) rotate(5deg);
+            }
+
+            .blog-card:hover .card__background--layer {
+                opacity: 1;
+            }
+
+            .blog-card:hover .blog-card__info h5 {
+                color: #ffb535;
+            }
+
+            a.icon-link {
+                color: #363738;
+                transition: 200ms ease-in-out;
+            }
+
+            a.icon-link i {
+                color: #ffb535;
+            }
+
+            a.icon-link:hover {
+                color: #ffb535;
+                text-decoration: none;
+            }
+
+            .btn {
+                background: white;
+                color: #363738;
+                font-weight: bold;
+                outline: none;
+                box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.2);
+                overflow: hidden;
+                border-radius: 0;
+                height: 50px;
+                line-height: 50px;
+                display: inline-block;
+                padding: 0;
+                border: none;
+            }
+
+            .btn:focus {
+                box-shadow: none;
+            }
+
+            .btn:hover {
+                background: #ffb535;
+                color: #fff;
+            }
+
+            .btn.btn--with-icon {
+                padding-right: 20px;
+            }
+
+            .btn.btn--with-icon i {
+                padding: 0px 30px 0px 15px;
+                margin-right: 10px;
+                height: 50px;
+                line-height: 50px;
+                vertical-align: bottom;
+                color: white;
+                background: #ffb535;
+                clip-path: polygon(0 0, 70% 0, 100% 100%, 0% 100%);
+            }
+
+            .btn.btn--only-icon {
+                width: 50px;
+            }
+        </style>
     </head>
     <h1>Welcome to the Jumping Protein Blog!</h1>
     <h6>This is where you will find all current events, and news surround GCET and Jumping Protein!</h6>
     <br>
     {% for post in posts %}
-        <div class="container">
-            <div class="mt-3">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
-                        <p class="card-text">        {{ post.body|safe|linebreaksbr|truncatechars:100 }}
-                        </p>
-                        <p class="card-text"><small class="text-muted">
-                        <p class="date">
-                            Published {{ post.publish|safe }} by {{ post.author }}
-                        </p>
-                    </div>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-12">
+                    <article class="blog-card">
+                        <div class="blog-card__background">
+                            <div class="card__background--wrapper">
+                                <div class="card__background--main"
+                                     style="background-image: url({{ post.blog_image.url }});">
+
+                                    <div class="card__background--layer"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-card__head">
+          <span class="date__box">
+            <span class="date__day">11</span>
+            <span class="date__month">JAN</span>
+          </span>
+                        </div>
+                        <div class="blog-card__info">
+                            <h5>{{ post.title }}</h5>
+                            <p>
+                                <a href="{{ post.get_absolute_url }}" class="icon-link mr-3"><i
+                                        class="fa fa-pencil-square-o"></i>{{ post.author }}</a>
+                                <a href="#" class="icon-link"><i class="fa fa-comments-o"></i> 150</a>
+                            </p>
+                            <p>{{ post.body|safe|truncatewords:30|linebreaks }}</p>
+                            <a href="{{ post.get_absolute_url }}" class="btn btn--with-icon"><i
+                                    class="btn-icon fa fa-long-arrow-right"></i>READ
+                                MORE</a>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
 
+        <section class="detail-page">
+            <div class="container mt-5">
 
+            </div>
+        </section>
+
+    {% empty %}
+        <h2>No blogs written yet.</h2>
     {% endfor %}
 {% endblock content %}
