--- a/photos/templates/photos/photo.html
+++ b/photos/templates/photos/photo.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -6,29 +7,35 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Photo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="{% static 'photos/css/lightbox.css' %}" rel="stylesheet"/>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
 
 <body class="m-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col">
 
-                <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
+            <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
 
-                <div style="height: 90vh;">
-                    <img style="max-width: 100%; max-height: 100%;" src="{{photo.image.url}}" alt="">
+            <div style="height: 90vh;">
+                <img style="max-width: 100%; max-height: 100%;" src="{{ photo.image.url }}" alt="">
 
-                    <p>{{photo.description}}</p>
-                </div>
-
+                <p>{{ photo.description }}</p>
             </div>
+
         </div>
     </div>
-
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
