--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
               <a class="nav-link" href="{% url 'about'  %}">About</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'article:articles'  %}">Makaleler</a>
+                <a class="nav-link" href="{% url 'article:articles'  %}">Blog</a>
             </li>
             
           </ul>
