--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -66,7 +66,7 @@
                     <ul>
                         <li><a href="{% url 'index' %}" class="active">Home</a></li>
                         <li><a href="{% url 'about' %}">About Us</a></li>
-                        <li><a href="{% url 'blog:post_list' %}">Blog</a></li>
+                        <li><a href="{% url 'article:articles' %}">Blog</a></li>
                         <li><a href="#">Gallery</a></li>
                     </ul>
                 </div>
@@ -99,7 +99,7 @@
             ·
             <a href="{% url 'about' %}">Blog</a>
             ·
-            <a href="{% url 'blog:post_list' %}">Pricing</a>
+            <a href="{% url 'article:articles' %}">Blog</a>
             ·
             <a href="{% url 'gallery' %}">About</a>
 
