--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     Welcome, <small>{{request.user.username}}</small>
 </p>
 <hr>
-<a class = "btn btn-danger" href = "{% url 'article:addarticle' %}">New Post </a>
+<a class = "btn btn-danger" href = "{% url 'article:addarticle' %}">New Post</a>
 <hr>
 {% if articles %}
 <table class="table">
@@ -28,8 +28,8 @@
             <td><a href="{% url 'article:detail' article.slug %}">{{article.title}}</a></td>
             <td>{{article.author.username}}</td>
             <td>{{article.created_date}}</td>
-            <td><a href="{% url 'article:update' article.slug %}" class = "btn btn-danger">Güncelle</a></td>
-            <td><a href="{% url 'article:delete' article.slug %}" class = "btn btn-danger">Sil</a> </td>
+            <td><a href="{% url 'article:update' article.slug %}" class = "btn btn-danger">Update</a></td>
+            <td><a href="{% url 'article:delete' article.slug %}" class = "btn btn-danger">Delete</a> </td>
               
           </tr>
           {% endfor %}
