--- a/templates/update.html
+++ b/templates/update.html
@@ -1,18 +1,19 @@
 {% extends "layout.html" %}
+{% load crispy_forms_filters %}
 
 {% block body %}
 {% load crispy_forms_tags %}
 
 <div class="row">
     <div class="col-md-6 offset-md-3">
-        <h3>Makale Güncelle</h3>
+        <h3>Update Post</h3>
         <hr>
         <form method = "post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.media}}
             {{form|crispy}}
             <br>
-            <button type = "submit" class = "btn btn-danger">Makale Güncelle</button>
+            <button type = "submit" class = "btn btn-danger">Update</button>
         </form>
     </div>
   </div>
