Some minor changes and imports.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,11 +14,11 @@
         <thead>
           <tr>
             <th scope="col">id</th>
-            <th scope="col">Başlık</th>
-            <th scope="col">Yazar</th>
-            <th scope="col">Tarih</th>
-            <th scope="col">Güncelle</th>
-            <th scope="col">Sil</th>
+            <th scope="col">Title</th>
+            <th scope="col">User</th>
+            <th scope="col">Date</th>
+            <th scope="col">Update</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
