--- a/static/webapp/css/bootstrap.css
+++ b/static/webapp/css/bootstrap.css
@@ -1557,7 +1557,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 30px;
+  font-size: 2em;
 }
 
 h3, .h3 {
@@ -7249,6 +7249,9 @@ button.close {
 @media (max-width: 767px) {
   .hidden-xs {
     display: none !important;
+  }
+  .h2{
+    font-size: 1.5em
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
