--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -2,6 +2,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x:hidden;
 }
 
 body {
@@ -53,7 +54,6 @@ body.fh5co-offcanvas {
 }
 
 .row {
-    display: flex;
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -148,6 +148,12 @@ a:active {
     margin-right: auto;
     width: 30em;
     display: block;
+    font-size: 1.5rem; !important;
+}
+
+.values-column .h2 {
+    font-size: 1em;
+
 
 }
 
@@ -1534,7 +1540,7 @@ header {
 
 @media screen and (max-width: 768px) {
     .fh5co-cover.fh5co-cover_2 {
-        heifght: inherit;
+        height: inherit;
         padding: 3em 0;
     }
 }
@@ -2115,6 +2121,8 @@ header {
     #fh5co-portfolio-list li {
         margin-left: 0;
     }
+
+
 }
 
 #fh5co-portfolio-list li a {
@@ -2847,6 +2855,10 @@ color: #fff
         display: block;
         top: 0px;
         margin-top: 2em;
+    }
+
+    .h2{
+        font-size: 1.5em;
     }
 }
 
