--- a/templates/articles.html
+++ b/templates/articles.html
@@ -77,7 +77,7 @@
     <div class="col-md-10 offset-md-3">
         <div class="col-lg-8">
 <div class = "alert alert-danger">
-   Makale Bulunamadı
+   No articles yet..
 </div>
 </div>
 </div>
