--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
-    <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'webapp/css/normalize.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
@@ -50,6 +50,8 @@
 
 {% block content %}
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Roboto');
+
         #header-wrapper {
             position: relative;
             padding-top: 0;
@@ -68,7 +70,6 @@
 
         }
 
-        @import url('https://fonts.googleapis.com/css?family=Roboto');
         body {
             margin: 0;
             padding: 0;
