changed shadows, added deployment settings, updated manifest, other changes.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -3457,7 +3457,8 @@ color: #fff
     }
 
     #banner .title .byline {
-        font-size: 1.1rem;
+        font-size: .5rem;
+        color: darkgrey;
     }
 
     #banner .button {
