--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -1,4 +1,3 @@
-
 {% extends 'webapp/base.html' %}
 {% load static %}
 <!DOCTYPE html>
@@ -18,7 +17,7 @@
     <meta name="author" content="Esnath Divasoni">
     <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
@@ -251,7 +250,7 @@
                 <div class="mission">
 
                     <div class="left">
-                        <img src="{% static 'webapp/images/group-sitting.webp' %}">
+                        <img src="{% static 'webapp/images/woman-tape-bowl.jpg' %}">
                     </div>
                     <div class="right">
                         <h1>How We Add Value</h1>
