Changed path in the scripts at the bottom of gallery.html to reflect the S# path for the JS files.

--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -86,13 +86,13 @@
         </div>
 
 
-    <script src="{% static 'webapp/js/jquery.min.js' %}"></script>
-    <script src="{% static 'webapp/js/jquery.scrollex.min.js' %}"></script>
-    <script src="{% static 'webapp/js/jquery.scrolly.min.js' %}"></script>
-    <script src="{% static 'webapp/js/browser.min.js' %} "></script>
-    <script src="{% static 'webapp/js/breakpoints.min.js' %}"></script>
-    <script src="{% static 'webapp/js/util.js' %}"></script>
-    <script src="{% static 'webapp/js/main.js' %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+    <script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+    <script src="{% static 'js/browser.min.js' %} "></script>
+    <script src="{% static 'js/breakpoints.min.js' %}"></script>
+    <script src="{% static 'js/util.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'photos/js/lightbox.js' %}"></script>
 
     </body>
