--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -1,4 +1,6 @@
 {% extends 'webapp/base.html' %}
+
+{% load cache %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +17,7 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
+    <link rel="manifest" href="{% static 'jumpingprotein/manifest.json' %}">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
