--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -1,3 +1,4 @@
+{% load cache %}
 {% load pwa %}
 {% load static %}
 
@@ -14,7 +15,7 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
+    <link rel="manifest" href="{% static 'jumpingprotein/manifest.json' %}">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -68,7 +69,7 @@
                         <li><a href="{% url 'index' %}" class="active">Home</a></li>
                         <li><a href="{% url 'about' %}">About Us</a></li>
                         <li><a href="{% url 'article:articles' %}">Blog</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="{% url 'gallery' %}">Gallery</a></li>
                     </ul>
                 </div>
             </div>
