--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -1,6 +1,7 @@
 {% load cache %}
 {% load pwa %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,87 +16,110 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <style>
-            .image-thumbail {
-                height: 200px;
-                object-fit: cover;
-            }
+    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+    <style>
+        .image-thumbail {
+            height: 200px;
+            object-fit: cover;
+        }
 
-            .list-group-item a {
-                text-decoration: none;
-                color: black;
-            }
+        .list-group-item a {
+            text-decoration: none;
+            color: black;
+        }
 
-            #sidebar {
-                display: none;
-            }
-        </style>
-        </head>
+        #sidebar {
+            display: none;
+        }
+    </style>
+</head>
+<nav class="navbar navbar-expand-lg navbar-custom">
+    <a class="navbar-brand" href="{% url 'about' %}">GCET</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <body class="m-5">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+                        <li class="nav-item">
+                <a class="nav-link" href="{% url 'article:articles' %}">Blog</a>
+            </li>
 
-        <div class="container">
+        </ul>
+
+    </div>
+</nav>
+<body class="">
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+
+            <div class="card">
+                <div class="card-header">
+                    Categories
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <a href="{% url 'gallery' %}">All</a>
+                    </li>
+                    {% for category in categories %}
+                        <li class=" list-group-item">
+                            <a href="{% url 'gallery' %}?category={{ category.name }}">
+                                {{ category.name }}
+                            </a>
+                        </li>
+                    {% endfor %}
+
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-sm m-1">Add Photo</a>
+                    {% endif %}
+                </ul>
+            </div>
+
+        </div>
+        <div class="col-md-9">
             <div class="row">
-                <div class="col-md-3">
 
-                    <div class="card">
-                        <div class="card-header">
-                            Categories
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <a href="{% url 'gallery' %}">All</a>
-                            </li>
-                            {% for category in categories %}
-                                <li class=" list-group-item">
-                                    <a href="{% url 'gallery' %}?category={{ category.name }}">
-                                        {{ category.name }}
-                                    </a>
-                                </li>
-                            {% endfor %}
+                {% for photo in photos %}
+                    <div class="col-md-4">
+                        <div class="card my-2">
+                            <img class="image-thumbnail" src="{{ photo.image.url }}" alt="Card image cap">
 
-
-                            <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-sm m-1">Add Photo</a>
-
-                        </ul>
-                    </div>
-
-                </div>
-                <div class="col-md-9">
-                    <div class="row">
-
-                        {% for photo in photos %}
-                            <div class="col-md-4">
-                                <div class="card my-2">
-                                    <img class="image-thumbnail" src="{{ photo.image.url }}" alt="Card image cap">
-
-                                    <div class="card-body">
-                                        <small>Category: {{ photo.category.name }}</small>
-                                    </div>
-                                    <a href="{{ photo.image.url }}" data-lightbox="View"
-                                       data-title="{{ photo.description }}" data-alt="{{ photo.description }}"
-                                       class="btn btn-outline-dark btn-sm m-1">View</a>
-                                </div>
+                            <div class="card-body">
+                                <small>Category: {{ photo.category.name }}</small>
                             </div>
-
-                        {% endfor %}
-
-
+                            <a href="{{ photo.image.url }}" data-lightbox="View"
+                               data-title="{{ photo.description }}" data-alt="{{ photo.description }}"
+                               class="btn btn-outline-dark btn-sm m-1">View</a>
+                        </div>
                     </div>
-                </div>
+
+                {% endfor %}
+
+
             </div>
         </div>
+    </div>
+</div>
 
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
-    <script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
-    <script src="{% static 'js/browser.min.js' %} "></script>
-    <script src="{% static 'js/breakpoints.min.js' %}"></script>
-    <script src="{% static 'js/util.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'photos/js/lightbox.js' %}"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.scrollex.min.js' %}"></script>
+<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
+<script src="{% static 'js/browser.min.js' %} "></script>
+<script src="{% static 'js/breakpoints.min.js' %}"></script>
+<script src="{% static 'js/util.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'photos/js/lightbox.js' %}"></script>
 
-    </body>
+</body>
 
 </html>
