--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: "Roboto Light", Arial, sans-serif;
     line-height: 1.6;
     font-size: 16px;
     background: #fdfdfd;
@@ -525,6 +525,11 @@ ul.contact li a.icon-rss:before {
 .navbar .menu ul li a:hover,
 .navbar .menu ul li a.active {
     background: #32381abf;
+}
+
+.navbar .current {
+    background-color: #32381A;
+    font-weight: bold;
 }
 
 /*********************************************************************************/
