further changes to css and fonts. As well as navbar links and hovers. Making things look much more polished.
We are going to keep perfecting until it is time for the hard launch.

Need to figure out a place for the values column. Also need to figure out the issue with the blog post images.

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -67,7 +67,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="{% url 'index' %}" class="active">Home</a></li>
-                        <li><a href="{% url 'about' %}">About Us</a></li>
+                        <li><a class="current" href="{% url 'about' %}">About Us</a></li>
                         <li><a href="{% url 'article:articles' %}">Blog</a></li>
                         <li><a href="{% url 'gallery' %}">Gallery</a></li>
                     </ul>
