--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -435,6 +435,24 @@ ul.contact li a.icon-rss:before {
     border-bottom-right-radius: 10% 10%;
 }
 
+#about-header-wrapper {
+    position: relative;
+    padding-top: 0;
+    padding-bottom: 3em;
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.1)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/webapp/images/group-sitting.webp") 50% 0 no-repeat;
+    background-size: cover;
+    display: block;
+    height: auto;
+    width: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 10% 10%;
+    border-bottom-right-radius: 10% 10%;
+
+}
+
 
 #topheader {
     position: relative;
@@ -570,7 +588,7 @@ ul.contact li a.icon-rss:before {
 /*********************************************************************************/
 @font-face {
     font-family: 'icomoon';
-    src: url("../fonts/icomoon/icomoon.eot?srf3rx");
+    src: url("../fonts/icomoon/icomoon.eot");
     src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
     font-weight: normal;
     font-style: normal;
