--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -55,7 +55,7 @@
     }
 </style>
 
-<div id="header-wrapper">
+<div id="about-header-wrapper">
     <div id="topheader" class="container">
         <div id="logo">
         </div>
