--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -499,7 +499,7 @@ ul.contact li a.icon-rss:before {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100%;
+    height: 140%;
 }
 
 .navbar .hamburger {
@@ -522,14 +522,14 @@ ul.contact li a.icon-rss:before {
 }
 
 .navbar .menu ul li a {
-    width: 120px;
+    width: 150px;
     margin-right: 10px;
     display: block;
     text-align: center;
-    padding: 10px;
+    padding: 1px;
     border-radius: 25px;
     color: #fff;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-size: 14px;
     letter-spacing: 2px;
     transition: all 0.2s ease;
@@ -1305,6 +1305,8 @@ footer {
     .team .card {
         width: 40%;
     }
+
+
 }
 
 @media (max-width: 768px) {
@@ -3470,7 +3472,7 @@ color: #fff
     }
 
     .navbar {
-        height: 100px;
+        height: 60px;
         padding: 12px;
     }
 
@@ -3495,7 +3497,7 @@ color: #fff
     }
 
     #banner .title .byline {
-        font-size: 1rem;
+        font-size: 1.75rem;
         color: darkgrey;
     }
 
@@ -3509,7 +3511,7 @@ color: #fff
     }
 
     .navbar {
-        height: 100px;
+        height: 60px;
         padding: 12px;
 
     }
