--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -17,7 +17,7 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="{% static 'manifest.json' %}">
     {% progressive_web_app_meta %}
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
 
