changed sans serif to sans

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -3600,7 +3600,7 @@ color: #fff
 
         .footer-distributed h3 {
             color: #ffffff;
-            font: normal 1.5em 'Roboto Light', 'sans-serif';
+            font: normal 1.5em 'Roboto Light', 'sans';
             margin: 0;
         }
 
